[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/theme/DefaultGodotTheme/GodotTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/editor/Popups/EditorConfigPopupDialog.gd" type="Script" id=2]
[ext_resource path="res://src/utils/ControlAutoUnfocus.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/utils/AnimatedPopupAnim/AnimatedPopupAnim.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/editor_ui/Info.png" type="Texture" id=5]

[sub_resource type="InputEventKey" id=1]
scancode = 16777221

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 16777217

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="EditorConfigPopupDialog" type="WindowDialog"]
margin_right = 496.0
margin_bottom = 232.0
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "MMLV Editor Configuration"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 480.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
margin_right = 464.0
margin_bottom = 164.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
margin_right = 464.0
margin_bottom = 130.0
size_flags_horizontal = 3

[node name="AutoUpdate" type="HBoxContainer" parent="MarginContainer/VBox/ScrollContainer/VBox"]
margin_right = 464.0
margin_bottom = 24.0
hint_tooltip = "When enabled, automatically checks
for an update."
custom_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/VBox/AutoUpdate"]
margin_top = 1.0
margin_right = 216.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Automatically check for updates"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBox/ScrollContainer/VBox/AutoUpdate"]
margin_left = 248.0
margin_right = 464.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 1
size_flags_horizontal = 3
text = "On"

[node name="ControlAutoUnfocus" parent="MarginContainer/VBox/ScrollContainer/VBox/AutoUpdate/CheckBox" instance=ExtResource( 3 )]

[node name="ReducedMotion" type="HBoxContainer" parent="MarginContainer/VBox/ScrollContainer/VBox"]
margin_top = 28.0
margin_right = 464.0
margin_bottom = 52.0
hint_tooltip = "If you have sensitivity to motion effects,
animation or screen movement, you can
use Reduced Motion to turn off these
effects."
custom_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/VBox/ReducedMotion"]
margin_top = 1.0
margin_right = 216.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Reduced Motion"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBox/ScrollContainer/VBox/ReducedMotion"]
margin_left = 248.0
margin_right = 464.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 1
size_flags_horizontal = 3
text = "On"

[node name="ControlAutoUnfocus" parent="MarginContainer/VBox/ScrollContainer/VBox/ReducedMotion/CheckBox" instance=ExtResource( 3 )]

[node name="AdvancedMode" type="HBoxContainer" parent="MarginContainer/VBox/ScrollContainer/VBox"]
visible = false
margin_top = 56.0
margin_right = 464.0
margin_bottom = 80.0
hint_tooltip = "If you have sensitivity to motion effects,
animation or screen movement, you can
use Reduced Motion to turn off these
effects."
custom_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/VBox/AdvancedMode"]
margin_top = 1.0
margin_right = 216.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Advanced Mode"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBox/ScrollContainer/VBox/AdvancedMode"]
margin_left = 248.0
margin_right = 464.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 1
size_flags_horizontal = 3
text = "On"

[node name="ControlAutoUnfocus" parent="MarginContainer/VBox/ScrollContainer/VBox/AdvancedMode/CheckBox" instance=ExtResource( 3 )]

[node name="LockedKeyboard" type="HBoxContainer" parent="MarginContainer/VBox/ScrollContainer/VBox"]
visible = false
margin_top = 56.0
margin_right = 464.0
margin_bottom = 80.0
hint_tooltip = "If you have sensitivity to motion effects,
animation or screen movement, you can
use Reduced Motion to turn off these
effects."
custom_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/VBox/LockedKeyboard"]
margin_top = 1.0
margin_right = 304.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Lock Screen from moving by keyboard presses"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBox/ScrollContainer/VBox/LockedKeyboard"]
margin_left = 336.0
margin_right = 464.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 1
size_flags_horizontal = 3
text = "On"

[node name="ControlAutoUnfocus" parent="MarginContainer/VBox/ScrollContainer/VBox/LockedKeyboard/CheckBox" instance=ExtResource( 3 )]

[node name="CameraSmoothness" type="HBoxContainer" parent="MarginContainer/VBox/ScrollContainer/VBox"]
margin_top = 56.0
margin_right = 464.0
margin_bottom = 78.0
hint_tooltip = "Speed in pixels per second of the
camera's smoothing effect. Set this to 0 to
turn this off."
custom_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/VBox/CameraSmoothness"]
margin_right = 216.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Camera Smoothness"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBox/ScrollContainer/VBox/CameraSmoothness"]
margin_left = 248.0
margin_right = 464.0
margin_bottom = 22.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 1
size_flags_horizontal = 3

[node name="ControlAutoUnfocus" parent="MarginContainer/VBox/ScrollContainer/VBox/CameraSmoothness/LineEdit" instance=ExtResource( 3 )]

[node name="MaxRecentFiles" type="HBoxContainer" parent="MarginContainer/VBox/ScrollContainer/VBox"]
margin_top = 82.0
margin_right = 464.0
margin_bottom = 104.0
hint_tooltip = "The maximum number of recent file
history displayed in the menu file."
custom_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/VBox/MaxRecentFiles"]
margin_right = 216.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Max Recent Files"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBox/ScrollContainer/VBox/MaxRecentFiles"]
margin_left = 248.0
margin_right = 464.0
margin_bottom = 22.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 1
size_flags_horizontal = 3

[node name="ControlAutoUnfocus" parent="MarginContainer/VBox/ScrollContainer/VBox/MaxRecentFiles/LineEdit" instance=ExtResource( 3 )]

[node name="Fps" type="HBoxContainer" parent="MarginContainer/VBox/ScrollContainer/VBox"]
margin_top = 108.0
margin_right = 464.0
margin_bottom = 130.0
hint_tooltip = "The desired frames per second. If the
hardware cannot keep up, this setting may
not be respected. A value of 0 means no
limit."
custom_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/VBox/Fps"]
margin_right = 216.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Rendering Frame Rate"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBox/ScrollContainer/VBox/Fps"]
margin_left = 248.0
margin_right = 464.0
margin_bottom = 22.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 1
size_flags_horizontal = 3

[node name="ControlAutoUnfocus" parent="MarginContainer/VBox/ScrollContainer/VBox/Fps/LineEdit" instance=ExtResource( 3 )]

[node name="ConfirmHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
margin_top = 168.0
margin_right = 464.0
margin_bottom = 200.0
custom_constants/separation = 16
alignment = 2

[node name="HiddenButton" type="TextureButton" parent="MarginContainer/VBox/ConfirmHBox"]
margin_left = 272.0
margin_right = 304.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )

[node name="OkButton" type="Button" parent="MarginContainer/VBox/ConfirmHBox"]
margin_left = 320.0
margin_right = 384.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 0 )
shortcut = SubResource( 2 )
text = "Ok"

[node name="CancelButton" type="Button" parent="MarginContainer/VBox/ConfirmHBox"]
margin_left = 400.0
margin_right = 464.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 0 )
shortcut = SubResource( 4 )
text = "Cancel"

[node name="AnimatedPopupAnim" parent="." instance=ExtResource( 4 )]

[connection signal="about_to_show" from="." to="." method="_on_EditorConfigPopupDialog_about_to_show"]
[connection signal="unfocused" from="MarginContainer/VBox/ScrollContainer/VBox/CameraSmoothness/LineEdit/ControlAutoUnfocus" to="." method="_on_CameraSmoothness_LineEdit_unfocused"]
[connection signal="unfocused" from="MarginContainer/VBox/ScrollContainer/VBox/MaxRecentFiles/LineEdit/ControlAutoUnfocus" to="." method="_on_MaxRecentFiles_LineEdit_unfocused"]
[connection signal="unfocused" from="MarginContainer/VBox/ScrollContainer/VBox/Fps/LineEdit/ControlAutoUnfocus" to="." method="_on_Fps_LineEdit_unfocused"]
[connection signal="pressed" from="MarginContainer/VBox/ConfirmHBox/HiddenButton" to="." method="_on_HiddenButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/ConfirmHBox/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/ConfirmHBox/CancelButton" to="." method="_on_CancelButton_pressed"]
